--- a/app/writing/posts/first-5.mdx
+++ b/app/writing/posts/first-5.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Spaces vs. Tabs: The Indentation Debate Continues'
-publishedAt: '2024-04-08'
+title: 'First 5 Paying Customers'
+publishedAt: '2025-10-16'
 summary: 'Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think.'
 ---
 
